--- a/package.json
+++ b/package.json
@@ -20,24 +20,24 @@
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
     "babel": "^5.8.23",
-    "babel-core": "^5.8.23",
-    "babel-eslint": "^4.1.2",
+    "babel-core": "^5.8.25",
+    "babel-eslint": "^4.1.3",
     "babel-loader": "^5.3.2",
-    "babel-plugin-react-transform": "^1.0.3",
-    "bootstrap-sass": "^3.3.4",
-    "bourbon": "^4.2.3",
-    "classnames": "^2.1.1",
+    "babel-plugin-react-transform": "^1.1.1",
+    "bootstrap-sass": "^3.3.5",
+    "bourbon": "^4.2.5",
+    "classnames": "^2.1.5",
     "concurrently": "^0.1.1",
     "css-loader": "^0.19.0",
     "cssnext-loader": "^1.0.1",
     "eslint": "^1.6.0",
     "eslint-config-airbnb": "0.1.0",
-    "eslint-plugin-react": "^3.3.2",
-    "expect": "^1.10.0",
+    "eslint-plugin-react": "^3.5.1",
+    "expect": "^1.12.0",
     "extract-text-webpack-plugin": "^0.8.2",
     "file-loader": "^0.8.4",
     "gh-pages": "^0.4.0",
-    "html-webpack-plugin": "^1.4.0",
+    "html-webpack-plugin": "^1.6.1",
     "inuit-box": "^0.4.4",
     "inuit-box-sizing": "^0.2.0",
     "inuit-defaults": "^0.2.3",
@@ -56,54 +56,54 @@
     "inuit-responsive-widths": "^0.2.2",
     "inuit-tools-widths": "^0.1.4",
     "inuit-widths": "^0.4.2",
-    "isparta": "^3.0.3",
+    "isparta": "^3.1.0",
     "isparta-instrumenter-loader": "^0.2.1",
-    "json-loader": "^0.5.2",
+    "json-loader": "^0.5.3",
     "jsx-loader": "^0.13.2",
     "keymirror": "^0.1.1",
     "minimist": "^1.2.0",
-    "mocha": "^2.3.2",
+    "mocha": "^2.3.3",
     "mocha-loader": "^0.7.1",
     "raw-loader": "^0.5.1",
     "react-a11y": "0.2.6",
-    "react-addons-test-utils": "^0.14.0-rc1",
+    "react-addons-test-utils": "^0.14.0",
     "react-hot-loader": "^1.3.0",
     "react-router": "^1.0.0-rc1",
     "react-transform-catch-errors": "^1.0.0",
-    "react-transform-hmr": "^1.0.0",
-    "redbox-react": "^1.0.5",
-    "rewire": "^2.3.3",
+    "react-transform-hmr": "^1.0.1",
+    "redbox-react": "^1.1.1",
+    "rewire": "^2.3.4",
     "rewire-webpack": "^1.0.0",
     "rx": "^4.0.0",
     "sass-loader": "^3.0.0",
-    "sinon": "^1.14.1",
+    "sinon": "^1.17.1",
     "strip-loader": "^0.1.0",
-    "style-loader": "^0.12.2",
-    "url-loader": "^0.5.5",
-    "webpack": "^1.10.5",
+    "style-loader": "^0.12.4",
+    "url-loader": "^0.5.6",
+    "webpack": "^1.12.2",
     "webpack-dev-middleware": "^1.2.0",
-    "webpack-hot-middleware": "^2.1.0",
+    "webpack-hot-middleware": "^2.4.1",
     "webpack-md5-hash": "0.0.4",
     "whatwg-fetch": "^0.9.0"
   },
   "dependencies": {
     "babel-plugin-typecheck": "1.3.0",
-    "babel-runtime": "^5.8.20",
-    "body-parser": "^1.13.2",
+    "babel-runtime": "^5.8.25",
+    "body-parser": "^1.14.1",
     "bootstrap": "^3.3.5",
     "compress": "^0.99.0",
-    "compression": "^1.5.0",
+    "compression": "^1.6.0",
     "express": "^4.13.3",
     "express-session": "^1.11.3",
-    "history": "^1.9.1",
-    "http-proxy": "^1.11.1",
-    "node-fetch": "^1.3.2",
+    "history": "^1.12.2",
+    "http-proxy": "^1.11.2",
+    "node-fetch": "^1.3.3",
     "piping": "0.3.0",
-    "react": "^0.14.0-rc1",
-    "react-dom": "^0.14.0-rc1",
-    "react-redux": "^3.0.1",
-    "redux": "^3.0.0",
-    "redux-devtools": "^2.1.2",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-redux": "^3.1.0",
+    "redux": "^3.0.2",
+    "redux-devtools": "^2.1.5",
     "redux-thunk": "^1.0.0",
     "serve-favicon": "^2.3.0",
     "serve-static": "^1.10.0"
